views/stylesheets/core-style.less
@import "prefix-helpers.less";

@tdTranGrey: rgba(10, 10, 10, 0.7);
@tdGrey: #333333;
@tdOrange: #FF9900;
@tdBlue: #3399CC;
@tdOffWhite: #ddd;
@tdNodeGrey: #33342d;
@FooterHeight: 40px;
@FooterMargin: 45px;

.clearfix {
	clear: both;
}
.clear {
	clear: both;
}

html, body {
	height: 100%;
}

html {
	background: @tdNodeGrey;
	font-size: 16px;
}

body {
	margin: 0;
	font-family: 'Cabin', sans-serif;
}

a {
	color: @tdOffWhite;
	outline: none;
	
	&:visitied {
		color: @tdOffWhite;
	}
	
	&:hover, &:visited:hover {
		color: @tdOrange;
	}
}

#tdMain {
	@TotalFooterHeight: @FooterMargin + @FooterHeight;
	
	min-height: 100%;
	margin-bottom: -@TotalFooterHeight;
	
	div.footer-spacer {
		height: @TotalFooterHeight;
	}
}

#tdMain > header {

	h1 {
		color: @tdOrange;
		font-family: 'Lobster';
		text-shadow: 3px 3px 2px rgba(10, 10, 10, 0.6);
		border-bottom: 2px dotted #DDD;
	}

	h1 em {
		color: @tdBlue;
		font-style: normal;
	}
}

body > footer {
	
	width: 100%;
	margin: @FooterMargin 0 0 0;
	background: @tdOrange;
	font-size: 0.9em;
	color: #222;
	height: @FooterHeight;
	overflow: hidden;
}

#tdMain > nav {

	line-height: 2.3em;
	font-size: 1em;
	font-family: 'Cabin', sans-serif;
	color: @tdOffWhite;
	border-top: 5px #ff9900 solid;
	
	ul {
		margin: 0;
		padding: 0;
		text-align: center;
	}
	
	li {
		display: inline;
		white-space: nowrap;
	}
	
	a {
		color: @tdOffWhite;
		text-decoration: none;
		padding: 0 0 0.4em 0;
		
		&:visited {
			color: @tdOffWhite;
		}
		
		&:hover, &:visited:hover {
			border-bottom: @tdOrange 0.3em solid;
		}
	}
	
	span {
		padding: 0 0 0.4em 0;
		border-bottom: @tdBlue 0.3em solid;
	}
}

article {
	
	font-size: 1em;
	color: @tdOffWhite;
	
	ul.string-list {
		list-style-position: inside;
		line-height: 1.7em;
	}
	
	p {
		margin: 1.2em 0;
		font-size: 1.0em;
		line-height: 1.7em;
	}
	
	small {
		font-size: 0.95em;
		font-style: italic;
	}
	
	aside {
		font-size: 0.9em;
		line-height: 1.6em;
		background: @tdBlue;
		overflow: auto;
		width: 33%;
		
		&.left {
			float: left;
			margin: 0 2em 1em 0;
		}
		&.right {
			float: right;
			margin: 0 0 1em 2em;
		}
	}
	
	dl {
		margin: 1.5em;
		
		dt {
			font-weight: bold;
		}
		
		dd {
			color: #222;
			margin: 0 0 0.5em 0;
		}
	}
	
	img, iframe.videoembed {
		&.left {
			float: left;
			margin: 1em 1em 1em 0;
		}
		&.right {
			float: right;
			margin: 1em 0 1em 1em;
		}
	}
	
	a.try-button {
		float: right;
		background: @tdBlue;
		.BorderRadius(8px);
		padding: 1em 2em;
		margin: 1em 0;
		font-weight: bold;
		font-size: 1.5em;
		font-style: italic;
	}
}

#carousel {
	
	opacity: 0;
	.Transition(opacity 0.3s ease-in-out 0.3s);

	&.ready {
		opacity: 1;
	}
	
	.selectarea
	{
		margin: 2em 0 0;
		height: 366px;
		overflow: hidden;

		ul {
			
			list-style: none;
			margin: 0;
			padding: 0;
			height: 100%;
			/*width: 3000px;*/
		}

		ul li {
		
			float: left;
			padding: 0;
			margin: 0 0;
			cursor: pointer;
			opacity: 0.2;
			.Transition(opacity 0.3s ease-in-out);
			&.active {
				opacity: 1;
			}

			img {
				width: 100%;
				height: auto;
			}
		}
	}

	nav {
		height: 30px;
	}
	
	.selectbutton {
		float: left;
		width: 6%;
		height: 22px;
		background: darken(@tdBlue, 10%);
		cursor: pointer;
		font-size: 16px;
		text-align: center;
		line-height: 20px;
		
		@buttonbBorderRadius: 4px;
		&.previous {
			.BorderRadius(@buttonbBorderRadius 0 0 @buttonbBorderRadius);
		}
		&.next {
			.BorderRadius(0 @buttonbBorderRadius @buttonbBorderRadius 0);
		}
		
		&:hover {
			background: @tdBlue;
		}
		
		&.disabled:hover, &.disabled {
			background: #555;
		}
	}
	
	.selectbar {
		float: left;
		cursor: pointer;
		background: #444;
		padding: 0 2% 0 1%;
		width: 85%;

		&:hover {
			/*background: #555;*/
		}

		&.horizontal {
			height: 22px;

			.handle {
				position: relative;
				top: 4px;
				height: 14px;
			}
		}

		.handle {
			cursor: pointer;
			background: darken(@tdBlue, 10%);
			width: 33%;
			.BorderRadius(2px);

			&:hover, &.dragged {
				background: @tdBlue;
			}
		}
	}
	
	.selectcontent {
		position: relative;
	}
	
	.selectcontent article {
		clear: both;
		display: none;
/*		position: absolute;
		top: 0;
		left: 0;*/
		opacity: 0;
		.Transition(opacity 0.4s ease-in-out); 
		
		&.shown {
			display: block;
		}
		
		&.active {
			opacity: 1;
			.Transition(opacity 0.4s ease-in-out 0.4s); 
		}
	}
}


img.hollowface.left {
	margin-top: 0;
}

div.tiled-gadgets {
	background: url(../images/tiledgadgets.png);
	width: 100%;
	height: 90px;
}

img.gadget {
	width: 10%;
	height: auto;
	&.left {
		margin: 0 0 0 12%;
	}
	
	&.first.left {
		margin: 0 0 0 23%;
	}
}

